[gd_scene load_steps=3 format=3 uid="uid://bidt2gimqtajl"]

[ext_resource type="Script" path="res://menus/game_over.gd" id="1_2nkfd"]
[ext_resource type="AudioStream" uid="uid://lidjntvn7tpk" path="res://menus/sounds/dune-woman-2.mp3" id="2_r4ckr"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2nkfd")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.396078)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameOver" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = -30
theme_override_font_sizes/font_size = 72
text = "GAME OVER"

[node name="Score" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "High Score:"
horizontal_alignment = 1

[node name="NewScore" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.72549, 0, 1)
theme_override_font_sizes/font_size = 22
text = "New High Score!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Restart" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Quit"

[node name="DeathScream" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_r4ckr")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/GridContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/GridContainer/Quit" to="." method="_on_quit_pressed"]
